--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .env
 *.exe
-vendor/github.com/joho/godotenv (development only)
+vendor/github.com/joho/godotenv
+# (development only)
+bright-local.go
